// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexBox Child renders correctly with alignSelf 1`] = `
<DocumentFragment>
  .cache-meptv9 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
}

<div
    class="e1l6meh01 cache-meptv9 e7ah3bn0"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    class="e1l6meh01 cache-1c7ex61 e7ah3bn0"
  >
    This should act as a regular div
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with explicit basis, grow and shrink 1`] = `
<DocumentFragment>
  .cache-4aswx8 {
  -webkit-flex-basis: 1;
  -ms-flex-preferred-size: 1;
  flex-basis: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: auto;
  -ms-flex-negative: auto;
  flex-shrink: auto;
}

<div
    class="e1l6meh01 cache-4aswx8 e7ah3bn0"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with flex as a number 1`] = `
<DocumentFragment>
  .cache-fhbzyg {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="e1l6meh01 cache-fhbzyg e7ah3bn0"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with flex as string 1`] = `
<DocumentFragment>
  .cache-swent9 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

<div
    class="e1l6meh01 cache-swent9 e7ah3bn0"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with order 1`] = `
<DocumentFragment>
  .cache-1h50qcu {
  -webkit-order: 6;
  -ms-flex-order: 6;
  order: 6;
}

<div
    class="e1l6meh01 cache-1h50qcu e7ah3bn0"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with align properties 1`] = `
<DocumentFragment>
  .cache-1iiq4c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

<div
    class="e1l6meh00 e1l6meh01 cache-1iiq4c2 e7ah3bn0"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with children properties 1`] = `
<DocumentFragment>
  .cache-1lbwzv0 {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="e1l6meh00 e1l6meh01 cache-1lbwzv0 e7ah3bn0"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with custom direction 1`] = `
<DocumentFragment>
  .cache-id5yjj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div
    class="e1l6meh00 e1l6meh01 cache-id5yjj e7ah3bn0"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with custom wrap 1`] = `
<DocumentFragment>
  .cache-31i89 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
    class="e1l6meh00 e1l6meh01 cache-31i89 e7ah3bn0"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1aacvce {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="e1l6meh00 e1l6meh01 cache-1aacvce e7ah3bn0"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with inline flex 1`] = `
<DocumentFragment>
  .cache-f9k8f1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
    class="e1l6meh00 e1l6meh01 cache-f9k8f1 e7ah3bn0"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with justifyContent 1`] = `
<DocumentFragment>
  .cache-zchic9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="e1l6meh00 e1l6meh01 cache-zchic9 e7ah3bn0"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;
